argocd/platform/storage/garage/prereqs/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: garage
  namespace: garage
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.110.237
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: garage.home.arpa
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: garage.home.arpa
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: garage-tls
      allowedRoutes:
        namespaces:
          from: Same
