argocd/platform/storage/garage/prereqs/redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-http-redirect
  namespace: garage
spec:
  parentRefs:
    - name: garage
      sectionName: http
  hostnames:
    - garage.lab.zerodi.ru
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
